--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
-    "mongoose": "^6.10.0",
+    "mongoose": "^6.10.3",
     "nodemon": "^2.0.20"
   }
 }
