--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.3",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   }
 }
